flux/apps/home-assistant/mqtt/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      nodeSelector:
        location: "home"
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.1.2-alpine
          command:
            - /bin/sh
            - -ec
            - |
              mkdir -p /etc/mosquitto/certs
              cp -L /mnt/config/mosq.conf  /etc/mosquitto/mosq.conf
              cp -L /mnt/config/acls       /etc/mosquitto/acls
              cp -L /mnt/auth/pwfile       /etc/mosquitto/pwfile
              cp -L /mnt/certs/tls.key     /etc/mosquitto/certs/tls.key
              cp -L /mnt/certs/tls.crt     /etc/mosquitto/certs/tls.crt
              chown mosquitto:mosquitto -R /etc/mosquitto
              chmod 700 -R /etc/mosquitto
              exec /docker-entrypoint.sh /usr/sbin/mosquitto -c /etc/mosquitto/mosq.conf
          ports:
            - containerPort: 8883
              hostPort: 8884
              protocol: TCP
              name: mqtt-secure
            - containerPort: 1883
              hostPort: 1884
              protocol: TCP
              name: mqtt
          volumeMounts:
            - name: config
              mountPath: /mnt/config
              readOnly: true
            - name: auth
              mountPath: /mnt/auth
              readOnly: true
            - name: certs
              mountPath: /mnt/certs/
              readOnly: true
            - name: data
              mountPath: /mosquitto/data/
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
            defaultMode: 0440
        - name: auth
          secret:
            secretName: mosquitto-auth
            defaultMode: 0440
        - name: certs
          secret:
            secretName: mqtts-tls
            defaultMode: 0440
        - name: data
          persistentVolumeClaim:
            claimName: mosquitto-data-longhorn
