flux/apps/home-assistant/mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - port: 8883
      targetPort: 8883
      protocol: TCP
      name: mqtts
