flux/apps/home-assistant/mqtt/route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mqtt
  namespace: home-assistant
  annotations:
    external-dns.kubernetes.io/ttl: "300"
    external-dns.kubernetes.io/hostname: "home-mqtt.h3rmt.dev,mqtt.home.h3rmt.dev"
spec:
  parentRefs:
    - name: traefik
      namespace: kube-system
      kind: Gateway
      sectionName: secure-mqtt
  rules:
    - backendRefs:
        - name: mosquitto-service
          namespace: home-assistant
          port: 8883
